--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -52,15 +52,18 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v3
 
+      - name: Start Containers for Testing
+        run: docker-compose -f ./compose.yaml up -d
+        
       - name: Run Smoke Test
         run: ./smoke-test.sh
 
       - name: Run Integration Test
         run: ./integration-test.sh
 
-    
-
-          
+      - name: Stop Containers
+        run: docker-compose -f ./compose.yaml down
+   
   docker-deploy:
     runs-on: ubuntu-latest
     needs: docker-test
