--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -7,50 +7,68 @@ on:
 
 env:
   TAG: ${{ github.sha }}
+  AWS_REGION: ap-south-1
 
 jobs:
 
   docker-build:
     runs-on: ubuntu-latest
-    permissions:
-      id-token: write
-      contents: read
     steps:
       - name: Checkout Code
-        uses: actions/checkout@v4
+        uses: actions/checkout@v3
 
-      - name: Build & Push Web Image
-        uses: delivops/ecr-build-push-action@v0.1.0
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v5
         with:
-          image_name: "web"
-          tag: "latest,sha-${{ github.sha }}"
-          context: "./web"
-          file: "./web/Dockerfile"
-          aws_account_id: ${{ secrets.AWS_ACCOUNT_ID }}
-          aws_region: ap-south-1
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_KEY }}
+          aws-region: ${{ env.AWS_REGION }}
 
-      - name: Build & Push Nginx Image
-        uses: delivops/ecr-build-push-action@v0.1.0
+      - name: Login to ECR
+        id: login-ecr
+        uses: aws-actions/amazon-ecr-login@v2
+
+      - name: Set ECR_REGISTRY
+        run: echo "ECR_REGISTRY=${{ steps.login-ecr.outputs.registry }}" >> $GITHUB_ENV
+
+      - name: Run docker compose build
+        uses: hoverkraft-tech/compose-action@3846bcd61da338e9eaaf83e7ed0234a12b099b72
         with:
-          image_name: "nginx"
-          tag: "latest,sha-${{ github.sha }}"
-          context: "./nginx"
-          file: "./nginx/Dockerfile"
-          aws_account_id: ${{ secrets.AWS_ACCOUNT_ID }}
-          aws_region: ap-south-1
+          compose-file: "./compose.yaml"
+          services: |
+            web1
+            web2
+            nginx
+          command: build
+
+      - name: Push Images to ECR
+        run: |
+          echo "Pushing Docker Images to ECR..."
+          docker compose -f ./compose.yaml push
+
 
   docker-test:
     runs-on: ubuntu-latest
     needs: docker-build
     steps:
       - name: Checkout Code
-        uses: actions/checkout@v4
+        uses: actions/checkout@v3
 
-      - name: Smoke Test
-        run: ./smoke-test.sh
+      - name: Start Containers for Testing
+        run: docker compose -f ./compose.yaml up -d
+        
+      - name: Run Smoke Test
+        run: |
+          chmod +x smoke-test.sh
+          ./smoke-test.sh
 
-      - name: Integration Test
-        run: ./integration-test.sh
+      - name: Run Integration Test
+        run: |
+          chmod +x integration-test.sh
+          ./integration-test.sh
+
+      - name: Stop Containers
+        run: docker compose -f ./compose.yaml down
 
 
   docker-deploy:
@@ -64,16 +82,18 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_KEY }}
-          aws-region: ap-south-1
+          aws-region: ${{ env.AWS_REGION }}
 
-      - name: Deploy to EC2 via SSM
+      - name: EC2 Connect and Deploy
         run: |
-          echo "Deploying updated containers..."
+          echo "Deploying containers to EC2 instances via SSM..."
           aws ssm send-command \
             --document-name "AWS-RunShellScript" \
             --targets "Key=instanceIds,Values=${{ secrets.INSTANCE_IDS }}" \
             --parameters 'commands=[
-              "aws ecr get-login-password --region ap-south-1 | docker login --username AWS --password-stdin ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.ap-south-1.amazonaws.com",
-              "docker-compose pull",
-              "docker-compose up -d"
-            ]'
+              "aws ecr get-login-password --region ap-south-1 | docker login --username AWS --password-stdin 869588908060.dkr.ecr.ap-south-1.amazonaws.com",
+              "mkdir -p /home/ubuntu/app",
+              "cd /home/ubuntu/app",
+              "docker compose pull",
+              "docker compose up -d --remove-orphans"
+            ]' 
