--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -6,18 +6,20 @@ on:
       - main
 
 env:
+  TAG: ${{ github.sha }}
   AWS_REGION: ap-south-1
 
 jobs:
 
   docker-build:
     runs-on: ubuntu-latest
-
+    permissions:
+      id-token: write
+      contents: read
     steps:
       - name: Checkout Code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
-      # --- AWS AUTH ---
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v5
         with:
@@ -25,85 +27,65 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_KEY }}
           aws-region: ${{ env.AWS_REGION }}
 
-      # --- LOGIN TO ECR ---
       - name: Login to ECR
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v2
 
-      # --- EXPORT ECR REGISTRY TO ENV ---
-      - name: Export ECR Registry
+      - name: Set ECR_REGISTRY
         run: echo "ECR_REGISTRY=${{ steps.login-ecr.outputs.registry }}" >> $GITHUB_ENV
 
-      # --- BUILD USING DOCKER COMPOSE ---
-      - name: Build Images From Compose
-        uses: hoverkraft-tech/compose-action@v2.0.0
-        with:
-          compose-file: "./compose.yaml"
-          command: build
-
-      # --- PUSH IMAGES TO ECR ---
-      - name: Push Images to ECR
-        run: docker compose -f ./compose.yaml push
-
+      - name: Build & Push Docker Images from Compose
+        run: |
+          docker compose -f ./compose.yaml build
+          docker compose -f ./compose.yaml push
 
   docker-test:
     runs-on: ubuntu-latest
     needs: docker-build
-
     steps:
       - name: Checkout Code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
-      # --- START CONTAINERS FOR TESTING ---
-      - name: Start Containers
+      - name: Start Containers for Testing
         run: docker compose -f ./compose.yaml up -d
 
-      # --- SMOKE TEST ---
-      - name: Run Smoke Test
+      - name: Smoke Test
         run: |
           chmod +x smoke-test.sh
           ./smoke-test.sh
 
-      # --- INTEGRATION TEST ---
-      - name: Run Integration Test
+      - name: Integration Test
         run: |
           chmod +x integration-test.sh
           ./integration-test.sh
 
-      # --- STOP ---
-      - name: Stop Test Containers
+      - name: Stop Containers
         run: docker compose -f ./compose.yaml down
-
 
   docker-deploy:
     runs-on: ubuntu-latest
     needs: docker-test
-
+    env:
+      EC2_INSTANCES: ${{ secrets.INSTANCE_IDS }}
     steps:
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v5
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_KEY }}
-          aws-region: ap-south-1
+          aws-region: ${{ env.AWS_REGION }}
 
-      # --- DEPLOY TO EC2 USING SSM ---
       - name: Deploy to EC2 via SSM
         run: |
+          echo "Deploying updated containers to EC2 via SSM..."
           aws ssm send-command \
             --document-name "AWS-RunShellScript" \
             --targets "Key=instanceIds,Values=${{ secrets.INSTANCE_IDS }}" \
             --parameters 'commands=[
-              "echo Logging into ECR...",
-              "aws ecr get-login-password --region ap-south-1 | docker login --username AWS --password-stdin '${{ secrets.ECR_URL }}'",
-              
+              "aws ecr get-login-password --region ap-south-1 | docker login --username AWS --password-stdin ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.ap-south-1.amazonaws.com",
               "mkdir -p /home/ubuntu/app",
               "cd /home/ubuntu/app",
-
-              "echo Pulling latest images...",
+              "curl -O https://raw.githubusercontent.com/SreejaPakkiru/Capstone_Project/main/compose.yaml",
               "docker compose pull",
-
-              "echo Restarting containers...",
               "docker compose up -d --remove-orphans"
-            ]' \
-            --timeout-seconds 600
+            ]'
