--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -8,12 +8,13 @@ on:
 env:
   AWS_REGION: ap-south-1
   ECR_REPOSITORY: my-app
+  #TAG_VALUE: ${{ github.sha }}
 
 jobs:
   docker-build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
+      - name: Checkout Code
         uses: actions/checkout@v4
 
       - name: Configure AWS Credentials
@@ -31,59 +32,67 @@ jobs:
           aws ecr describe-repositories --repository-names ${{ env.ECR_REPOSITORY }} || \
           aws ecr create-repository --repository-name ${{ env.ECR_REPOSITORY }}
 
-      - name: Build and Push all images
+      - name: Build images using Docker Compose
+        uses: hoverkraft-tech/compose-action@3846bcd61da338e9eaaf83e7ed0234a12b099b72
+        with:
+          compose-file: "./docker/docker-compose.yml"
+
+      - name: Push images to ECR
         run: |
-          docker compose -f ./compose.yaml build
-          docker compose -f ./compose.yaml push
+          docker compose -f ./docker/docker-compose.yml push
+          
+      # - name: Build and Push all images using Docker Compose
+      #   run: |
+      #     docker compose -f ./compose.yaml build
+      #     docker compose -f ./compose.yaml push
 
   docker-test:
     runs-on: ubuntu-latest
     needs: docker-build
     steps:
-      - name: Checkout code
+      - name: Checkout Code
         uses: actions/checkout@v4
 
-      - name: Start Containers
+      - name: Start Containers for Testing
         run: docker compose -f ./compose.yaml up -d
 
-      - name: Wait for Services
-        run: sleep 5   # give web1 and web2 some time to start
+      - name: Wait for Services to Start
+        run: sleep 5
 
       - name: Run Smoke Test
         run: |
-         chmod +x ./smoke-test.sh
-         ./smoke-test.sh
-    
+          chmod +x ./smoke-test.sh
+          ./smoke-test.sh
+
       - name: Run Integration Test
         run: |
-         chmod +x ./integration-test.sh
-         ./integration-test.sh
+          chmod +x ./integration-test.sh
+          ./integration-test.sh
 
-
-      - name: Stop containers
+      - name: Stop Test Containers
         run: docker compose -f ./compose.yaml down
 
   docker-deploy:
     runs-on: ubuntu-latest
     needs: docker-test
-    env:
-      EC2_INSTANCES: ${{ secrets.INSTANCE_IDS }}
     steps:
-      - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v5
+      - name: Execute remote SSH commands
+        uses: appleboy/ssh-action@v1
         with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_KEY }}
-          aws-region: ${{ env.AWS_REGION }}
+          host: ${{ secrets.INSTANCE_IP }}
+          username: ubuntu
+          key: ${{ secrets.KEY }}
+          script: |
+            # Login to ECR
+            aws ecr get-login-password --region ap-south-1 | docker login --username AWS --password-stdin ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.ap-south-1.amazonaws.com
 
-      - name: Deploy to EC2 via SSM
-        run: |
-          aws ssm send-command \
-            --document-name "AWS-RunShellScript" \
-            --targets "Key=instanceIds,Values=${{ secrets.INSTANCE_IDS }}" \
-            --parameters 'commands=[
-              "aws ecr get-login-password --region ap-south-1 | docker login --username AWS --password-stdin ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.ap-south-1.amazonaws.com",
-              "cd /home/ubuntu/app || mkdir -p /home/ubuntu/app && cd /home/ubuntu/app",
-              "docker compose -f ./compose.yaml pull",
-              "docker compose -f ./compose.yaml up -d --remove-orphans"
-            ]'
+            # Create directory and clone repo (if needed)
+            cd /home/ubuntu || mkdir -p /home/ubuntu && cd /home/ubuntu
+            if [ ! -d "capstone_project" ]; then
+              git clone https://github.com/SreejaPakkiru/Capstone_Project.git capstone_project
+            fi
+            cd capstone_project
+
+            # Pull and run images via Docker Compose
+            docker compose -f ./compose.yaml pull
+            docker compose -f ./compose.yaml up -d --remove-orphans
