multi-stage build Dockerfile

--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -1,9 +1,19 @@
-FROM node:14.17.3-alpine3.14
+#Build Stage
+FROM node:18-alpine AS build
 
 WORKDIR /usr/src/app
 
 COPY package.json package-lock.json ./
-RUN npm ci
-COPY ./server.js ./
 
-CMD ["npm","start"]
+RUN npm ci --omit=dev
+
+COPY . .
+
+#Production Stage
+FROM node:18-alpine
+
+WORKDIR /usr/src/app
+
+COPY --from=build /usr/src/app /usr/src/app
+
+CMD ["npm", "start"]
