--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -103,8 +103,8 @@ jobs:
           username: ubuntu
           key: ${{ secrets.KEY }}
           script: |
-            # #Login to ECR
-            # aws ecr get-login-password --region ap-south-1 | docker login --username AWS --password-stdin ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.ap-south-1.amazonaws.com
+            #Login to ECR
+            aws ecr get-login-password --region ap-south-1 | docker login --username AWS --password-stdin ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.ap-south-1.amazonaws.com
             
             #Create directory and clone repo 
             cd /home/ubuntu || mkdir -p /home/ubuntu && cd /home/ubuntu
