Fix compose.yaml - use hardcoded latest tag instead of env var

--- a/compose.yaml
+++ b/compose.yaml
@@ -9,7 +9,7 @@ services:
   #web1 is the first instance of the Node.js application(used for load balancing with nginx)
   web1:
     build: ./web
-    image: capstone1.azurecr.io/capstone-web:${TAG_VALUE:-latest}
+    image: capstone1.azurecr.io/capstone-web:latest
     restart: on-failure
     hostname: web1
     ports:
@@ -18,7 +18,7 @@ services:
   #web2 is the second instance of the Node.js application(used for load balancing with nginx)
   web2:
     build: ./web
-    image: capstone1.azurecr.io/capstone-web:${TAG_VALUE:-latest}
+    image: capstone1.azurecr.io/capstone-web:latest
     restart: on-failure
     hostname: web2
     ports:
@@ -27,7 +27,7 @@ services:
   #nginx reverse proxy / load balance: Routes traffic to web1 and web2 instances
   nginx:
     build: ./nginx
-    image: capstone1.azurecr.io/capstone-nginx:${TAG_VALUE:-latest}
+    image: capstone1.azurecr.io/capstone-nginx:latest
     ports:
       - '80:80'
     depends_on:
